--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Upload your JSON and make API ready">
+  <meta name="keywords" content="JSON,GET,PUT,DELETE,Upload JSON,myjson,myjson.io,JSON Upload,Sample API,API Builder">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>myjson</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100&display=swap" rel="stylesheet">
-
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href=”jsoneditor/dist/jsoneditor.min.css” rel=”stylesheet” type=”text/css”>
- <script src=”jsoneditor/dist/jsoneditor.min.js”></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
